--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
   font-weight: 300;
   line-height: normal;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  margin-left: 50;
+}
+
+img {
+   margin: auto;
 }
 
 a {
