link color change

--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@ img {
 }
 
 a {
-  color: #156cc2;
+  color: #b5ae49;
   text-decoration: none;
 }
 a:hover {
-  color: #004c92;
+  color: #D8D059;
 }
 
